VAN-21495 Fixed a problem with am and pm line breaks in Smart Performance page.

--- a/vtr-ui/src/app/components/pages/page-smart-performance/children/subpage-schedule-scan/subpage-schedule-scan.component.scss
+++ b/vtr-ui/src/app/components/pages/page-smart-performance/children/subpage-schedule-scan/subpage-schedule-scan.component.scss
@@ -1619,6 +1619,7 @@ vtr-subpage-scanning {
 
 				.amPm-text {
 					cursor: pointer;
+					white-space: nowrap;
 
 					&:focus {
 						@include outline-blue;
